--- a/InventarioApi/InventarioDesktop/Views/MainWindow.xaml
+++ b/InventarioApi/InventarioDesktop/Views/MainWindow.xaml
@@ -72,23 +72,17 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             
-                            <Ellipse Grid.Row="0" 
-                                     Width="60" Height="60" 
-                                     HorizontalAlignment="Left"
-                                     Margin="0,0,0,15">
-                                <Ellipse.Fill>
-                                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                                        <GradientStop Color="#D4A574" Offset="0"/>
-                                        <GradientStop Color="#B8935E" Offset="1"/>
-                                    </LinearGradientBrush>
-                                </Ellipse.Fill>
-                            </Ellipse>
-                            <TextBlock Grid.Row="0" 
-                                       Text="📁" 
-                                       FontSize="28" 
-                                       HorizontalAlignment="Left"
-                                       VerticalAlignment="Center"
-                                       Margin="16,0,0,0"/>
+                                   <Grid Grid.Column="0" Width="60" Height="60" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Ellipse Width="60" Height="60">
+                <Ellipse.Fill>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="#D4A574" Offset="0"/>
+                        <GradientStop Color="#B8935E" Offset="1"/>
+                    </LinearGradientBrush>
+                </Ellipse.Fill>
+            </Ellipse>
+            <TextBlock Text="📁" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Grid>
                             
 
                             <TextBlock Grid.Row="1" 
@@ -123,24 +117,18 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             
-                            <Ellipse Grid.Row="0" 
-                                     Width="60" Height="60" 
-                                     HorizontalAlignment="Left"
-                                     Margin="0,0,0,15">
-                                <Ellipse.Fill>
-                                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                                        <GradientStop Color="#8B6F47" Offset="0"/>
-                                        <GradientStop Color="#6B5435" Offset="1"/>
-                                    </LinearGradientBrush>
-                                </Ellipse.Fill>
-                            </Ellipse>
-                            <TextBlock Grid.Row="0" 
-                                       Text="📦" 
-                                       FontSize="28" 
-                                       HorizontalAlignment="Left"
-                                       VerticalAlignment="Center"
-                                       Margin="16,0,0,0"/>
-                            
+                                                              <Grid Grid.Column="0" Width="60" Height="60" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Ellipse Width="60" Height="60">
+                <Ellipse.Fill>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="#D4A574" Offset="0"/>
+                        <GradientStop Color="#B8935E" Offset="1"/>
+                    </LinearGradientBrush>
+                </Ellipse.Fill>
+            </Ellipse>
+            <TextBlock Text="📦" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Grid>
+        
                             <TextBlock Grid.Row="1" 
                                        Text="Gestión de Productos" 
                                        FontSize="22" 
